2001-02-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm (pass-if):  Tests shall return a boolean value.

	* tests/bit-operations.test (documented?), tests/common-list.test
	(documented?), tests/environments.test (documented?),
	tests/eval.test (documented?), tests/gc.test (documented?),
	tests/numbers.test (documented?), tests/guardians.test,
	tests/hooks.test, tests/interp.test, tests/weaks.test:  Make sure
	that tests return a boolean value.

	* tests/list.test (documented?):  New function, replace all checks
	for documentation with calls to this function.

2001-02-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm (data-file):  Remove from export list.

2001-02-22  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/exceptions.test (syntax lambda): Renamed from (lambda).
	(syntax lambda cond-arrow-proc): Renamed from (lambda cond-arrow-proc).
	(syntax reading): New section.
	(syntax let*): New section.
	(syntax letrec): New section.
	(syntax set!): New section.
	(syntax misc): New section.
	(bindings unbound): New section.
	(bindings immutable-modification): New section.
	(bindings let): New section.
	(bindings let*): New section.
	(bindings letrec): New section.

	* tests/exceptions.test: New file.

2001-02-08  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* guile-test: Use (ice-9 and-let-star) instead of (ice-9
	and-let*).

2001-01-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	This patch fixes things that I have broken with the last one :-(

	* guile-test (test-suite):  New variable.

	(data-file-name):  New function.  Has the same purpose as the
	former function data-file from lib.scm.  Moved here in order to
	have all file name handling at the same place.  In contrast to the
	former 'data-file function, it is not checked whether a file
	exists.  This allows to use this function also for file names of
	files that are still to be created.

	(test-file-name):  Use the global 'test-suite variable.
